k8s/ingress-zipkin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-zipkin
  namespace: student-manager
  labels:
    name: api-gateway-zipkin
spec:
  rules:
  - host: student-manager.it
    http:
      paths:
      - pathType: Prefix
        path: "/zipkin"
        backend:
          service:
            name: zipkin
            port:
              number: 9411
